--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="primaryColorDark">#c25e00</color>
     <color name="red">#e53935</color>
     <color name="yellow">#ffeb3b</color>
+    <color name="dark_grey">#616161</color>
 </resources>
