Added functionality to Login,ForgotPassword,Register

--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -27,7 +27,7 @@
         android:layout_margin="15dp"
         android:backgroundTint="@color/white"
         android:hint="@string/enter_otp"
-        android:inputType="number"
+        android:inputType="numberPassword"
         android:maxLength="4"
         android:maxLines="1"
         android:padding="6dp"
@@ -42,7 +42,7 @@
         android:layout_margin="15dp"
         android:backgroundTint="@color/white"
         android:hint="@string/new_password"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:maxLines="1"
         android:padding="6dp"
         android:textColor="@color/white"
@@ -56,7 +56,7 @@
         android:layout_margin="15dp"
         android:backgroundTint="@color/white"
         android:hint="@string/confirm_password"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:maxLines="1"
         android:padding="6dp"
         android:textColor="@color/white"
