--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -65,4 +65,45 @@
         android:textAllCaps="false"
         android:textSize="18sp" />
 
+    <RelativeLayout
+        android:id="@+id/rlPlaceOrder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/primaryColor">
+
+        <ImageView
+            android:id="@+id/imgDone"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_above="@id/txtOrderSuccess"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/ic_success" />
+
+        <TextView
+            android:id="@+id/txtOrderSuccess"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_margin="15dp"
+            android:padding="6dp"
+            android:text="@string/order_success"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnOK"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="15dp"
+            android:backgroundTint="@color/primaryColorDark"
+            android:padding="6dp"
+            android:text="@string/ok"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+
+    </RelativeLayout>
+
 </RelativeLayout>
