--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -7,7 +7,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/ImageIcon"
         android:layout_width="120dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
         android:layout_height="120dp"
         app:cardCornerRadius="100dp"
@@ -18,15 +18,26 @@
         android:src="@drawable/user_image" />
     </androidx.cardview.widget.CardView>
     <TextView
-        android:id="@+id/NavigationHeaderText"
+        android:id="@+id/txtNavigationHeaderText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ImageIcon"
-        android:layout_margin="30dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
         android:padding="6dp"
         android:textSize="20sp"
         android:text="@string/navigation_drawer"
         android:textColor="@color/white"
         />
+    <TextView
+        android:id="@+id/txtNavigationHeaderSubtext"
+        android:textSize="16sp"
+        android:layout_below="@+id/txtNavigationHeaderText"
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
+        android:padding="6dp"
+        android:textColor="@color/white"
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
