--- a/app/src/main/res/layout/order_history_single_item.xml
+++ b/app/src/main/res/layout/order_history_single_item.xml
@@ -2,6 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/dark_grey"/>
 
     <TextView
         android:id="@+id/txtRestaurantName"
@@ -27,7 +31,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecyclerFoodMenu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/txtRestaurantName"
         android:layout_margin="10dp"
         android:padding="6dp" />
